Styling fixes around spell cost container

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<h2 id="title">Welcome to Embers of Knowledge game!</h2>
+<span id="title" style="font-size: xx-large;" class="title-inline">Embers of Knowledge</span> <a href="https://github.com/mbabernathy/embers-of-knowledge" target="_blank">Github Repo Link</a>
 {{#if model.player.isBattling}}
   {{battle-frame}}
 {{else}}
