--- a/app/templates/components/store-frame.hbs
+++ b/app/templates/components/store-frame.hbs
@@ -1,4 +1,5 @@
-<div style="">
+<div>
+  <span class="title-inline">Upgrade Store</span>
   Your money: {{player.player_money}}
   <button class="btn btn-primary" {{action "gotoBattle"}}>Done Shopping</button>
 </div>
