--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -7,6 +7,11 @@
   border: 1px solid;
 }
 
+.title-inline {
+  font-size: x-large;
+  font-weight: bold;
+}
+
 .battleflexbox {
   display: flex;
   flex-flow: row wrap;
@@ -94,6 +99,20 @@
   flex-direction: column;
   align-items: stretch;
   text-align: left;
+}
+
+.spell-cost-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.spacer {
+  flex-grow: 1;
+}
+
+.spell-cost {
+  margin: 0.5em;
 }
 
 .spell-picker-container {
